--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "vue-slick-carousel": "^1.0.6"
+    "vue-slick-carousel": "^1.0.6",
+    "vuesax": "^4.0.1-alpha.25",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
+    "sass": "^1.49.7",
+    "sass-loader": "10.1.1",
     "tailwindcss": "^3.0.15"
   }
 }
