--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
+    "moment": "^2.29.1",
     "nuxt": "^2.15.7",
     "vue-slick-carousel": "^1.0.6",
+    "vue-tabs-with-active-line": "^1.2.6",
+    "vuelidate": "^0.7.7",
     "vuesax": "^4.0.1-alpha.25",
     "webpack": "^4.46.0"
   },
