--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
+    "firebase": "^9.6.6",
     "moment": "^2.29.1",
     "nuxt": "^2.15.7",
     "vue-slick-carousel": "^1.0.6",
